--- a/vue-bookstore/package.json
+++ b/vue-bookstore/package.json
@@ -8,13 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "0.19.2",
     "bootstrap": "4.5.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-axios": "2.1.5",
     "vue-router": "^3.5.1",
     "vuelidate": "^0.7.7",
-    "vuex": "^3.6.2"
+    "vuex": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
